# A2A-Protocol

./: .replit  CONTRIBUTING.md  Makefile  README.md  a2a.py  a2a_demo_agent.py  agents.py  api.py  data.json  initiation.py  interactions.py  logs.py  main.py  peer.py  pyproject.toml  requirements.txt  send.py  send_old.py  zones.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: python-app.yml  python-publish.yml
Examples/: __init__.py  agent_simulator.py  demo_interaction.py  research_agent.py  zone_builder.py
docs/: manifesto.md
scripts/: dev.ps1
src/a2a/: __init__.py  agents.py  core.py  discovery.py  events.py  zones.py
tests/: conftest.py  test_a2a.py  test_peer_events.py  test_zones_duplicate.py
