[project]
name = "a2a-protocol"
version = "0.1.0"
description = "A decentralized protocol for communication between agents in a peer-to-peer (P2P) network"
authors = [
    { name = "GlobalAgents-Hub", email = "contact@globalagents.hub" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "flask>=3.1.2",
    "typer>=0.20.0",
]

[project.urls]
Homepage = "https://github.com/GlobalAgents-Hub/A2A-Protocol"
Repository = "https://github.com/GlobalAgents-Hub/A2A-Protocol.git"
Documentation = "https://github.com/GlobalAgents-Hub/A2A-Protocol/blob/main/README.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"
